--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -114,7 +114,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="buttons">
-                                            <a href="" class="btn">Download CV</a>
+                                            <a href="" class="btn">ownload CV</a>
                                             <a href="#contact" class="btn hire-me">Hire Me</a>
                                         </div>
                                     </div>
